--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -22,9 +22,28 @@ jobs:
           dvc get-url https://gist.githubusercontent.com/slopp/aaa98f5c9d8d5161396b6afedb1b1b52/raw/86c6190a539ef751bfa99b3592d6a1952cccf939/housing.csv housing.csv
           dvc repro
           
+          # Report metrics
+          echo "## Diff" >> report.md
+          git fetch --prune
+          dvc params diff master --show-md >> report.md
+          dvc metrics diff master --show-md >> report.md
+          
+          
+          # Table for current run
+          echo "## Details" >> report.md
           cat metrics_table.html >> report.md 
+          
+          # Plots for current run
+          echo "## Plots" >> report.md
+          cml-publish errors.png --md >> report.md
+          cml-publish ensemble.png --md >> report.md
+          cml-publish tree-importance.png --md >> report.md
+          echo "Download fit_model.html for full details" >> report.md
+          
+          # send as PR comment
           cml-send-comment report.md
-      - name: Commit changes
+          
+      - name: commit_results
         uses: EndBug/add-and-commit@v5
         with:
           author_name: Sean Lopp
