--- a/dvc.yaml
+++ b/dvc.yaml
@@ -7,6 +7,7 @@ stages:
     - render-it.R
     params:
     - tune.trees
+    - ensemble.alpha
     metrics:
     - metrics.json:
         cache: false
